Fix feedback button overlay overlapping the block toolbar

--- a/client/blocks/feedback/edit.scss
+++ b/client/blocks/feedback/edit.scss
@@ -55,7 +55,7 @@
 
 	.wp-block[data-type="crowdsignal-forms/feedback"] {
 		width: auto;
-		z-index: 100;
+		z-index: 1;
 
 		&::after {
 			display: none;
